apps/base/auth/lldap/deployment.yaml
---
kind: Deployment
apiVersion: apps/v1
metadata:
  name: lldap
spec:
  replicas: 2
  selector:
    matchLabels:
      app: lldap
  template:
    metadata:
      labels:
        app: lldap
    spec:
      enableServiceLinks: false
      # max 1 per node
      affinity:
        podAntiAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            - topologyKey: kubernetes.io/hostname
              labelSelector:
                matchExpressions:
                  - key: app
                    operator: In
                    values:
                      - lldap
      # priorityClassName: high-priority
      containers:
        - name: lldap
          image: docker.io/lldap/lldap:v0.6.1
          imagePullPolicy: IfNotPresent
          ports:
            - name: ldap
              containerPort: 3890
              protocol: TCP
            - name: http
              containerPort: 17170
              protocol: TCP
          resources:
            requests:
              cpu: 50m
              memory: 256Mi
            limits:
              cpu: 250m
              memory: 512Mi
          securityContext:
            allowPrivilegeEscalation: false
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 33%
      maxSurge: 33%
