apps/base/auth/lldap/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: lldap
spec:
  ports:
    - port: 389
      targetPort: 3890
      name: ldap
    - port: 17170
      name: http
  selector:
    app: lldap
